<resources>
    <string name="app_name">AndroidBasicLibrary</string>
    <string name="init">Init</string>
    <string name="add">Add</string>
    <string name="add_to_0">Add To 0</string>
    <string name="inset">Inset</string>
    <string name="inset_to_0">Inset TO 0</string>
    <string name="move_0_and_8">Move 0 and 8</string>
    <string name="remove">Remove</string>
    <string name="remove_all">RemoveAll</string>
    <string name="inset_layout_or_remove_layout">InsetLayout or RemoveLayout</string>
    <string name="set_data">设置数据</string>
    <string name="pull_down_to_refresh">下拉刷新...</string>
</resources>
